# ta-lib-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md  TODO.md  docs_github_report.txt  main.py  prd.md  pyproject.toml
.github/workflows/: bench.yml  ci.yml
crates/polars-ta/: Cargo.toml
crates/polars-ta-core/: Cargo.toml
crates/polars-ta-core/examples/: bench_opt.rs
crates/polars-ta-core/src/: lib.rs
crates/polars-ta-core/src/hilbert/: core.rs  ht_dcperiod.rs  ht_dcphase.rs  ht_phasor.rs  ht_sine.rs  ht_trendline.rs  ht_trendmode.rs  mod.rs
crates/polars-ta-core/src/math_ops/: add.rs  div.rs  max.rs  maxindex.rs  min.rs  minindex.rs  minmax.rs  minmaxindex.rs  mod.rs  mult.rs  sub.rs  sum.rs
crates/polars-ta-core/src/math_transform/: mod.rs
crates/polars-ta-core/src/oscillator/: adxr.rs  apo.rs  aroon.rs  aroonosc.rs  bop.rs  cci.rs  cmo.rs  dm_core.rs  dx.rs  mfi.rs  minus_di.rs  minus_dm.rs  mod.rs  mom.rs  plus_di.rs  plus_dm.rs  ppo.rs  roc.rs  rocp.rs  rocr.rs  rocr100.rs  rsi.rs  stoch.rs  stochf.rs  stochrsi.rs  trix.rs  ultosc.rs  willr.rs
crates/polars-ta-core/src/pattern/: cdl2crows.rs  cdl3blackcrows.rs  cdl3inside.rs  cdl3linestrike.rs  cdl3outside.rs  cdl3starsinsouth.rs  cdl3whitesoldiers.rs  cdlabandonedbaby.rs  cdladvanceblock.rs  cdlbelthold.rs  cdlbreakaway.rs  cdlclosingmarubozu.rs  cdlconcealbabyswall.rs  cdlcounterattack.rs  cdldarkcloudcover.rs  cdldoji.rs  cdldojistar.rs  cdldragonflydoji.rs  cdlengulfing.rs  cdleveningdojistar.rs  cdleveningstar.rs  cdlgapsidesidewhite.rs  cdlgravestonedoji.rs  cdlhammer.rs  cdlhangingman.rs  cdlharami.rs  cdlharamicross.rs  cdlhighwave.rs  cdlhikkake.rs  cdlhikkakemod.rs  cdlhomingpigeon.rs  cdlidentical3crows.rs  cdlinneck.rs  cdlinvertedhammer.rs  cdlkicking.rs  cdlkickingbylength.rs  cdlladderbottom.rs  cdllongleggeddoji.rs  cdllongline.rs  cdlmarubozu.rs  (+23 more)
crates/polars-ta-core/src/price_transform/: avgprice.rs  medprice.rs  mod.rs  typprice.rs  wclprice.rs
crates/polars-ta-core/src/statistic/: beta.rs  correl.rs  linearreg.rs  linearreg_angle.rs  linearreg_intercept.rs  linearreg_slope.rs  mod.rs  stddev.rs  tsf.rs  var.rs
crates/polars-ta-core/src/trend/: adx.rs  bbands.rs  dema.rs  ema.rs  kama.rs  ma.rs  macd.rs  macdext.rs  macdfix.rs  mama.rs  mavp.rs  midpoint.rs  midprice.rs  mod.rs  sar.rs  sarext.rs  sma.rs  t3.rs  tema.rs  trima.rs  wma.rs
crates/polars-ta-core/src/volatility/: atr.rs  mod.rs  natr.rs  trange.rs
crates/polars-ta-core/src/volume/: ad.rs  adosc.rs  mod.rs  obv.rs
crates/polars-ta-plugin/: Cargo.toml
crates/polars-ta-plugin/src/: lib.rs
crates/polars-ta-verify/: Cargo.toml
crates/polars-ta-verify/benches/: bench_vs_talib.rs
crates/polars-ta-verify/src/: lib.rs
crates/polars-ta-verify/src/bench/: mod.rs
crates/polars-ta-verify/src/golden/: mod.rs
crates/polars-ta-verify/tests/: golden_acos.rs  golden_ad.rs  golden_add.rs  golden_adosc.rs  golden_adx.rs  golden_adxr.rs  golden_apo.rs  golden_aroon.rs  golden_aroonosc.rs  golden_asin.rs  golden_atan.rs  golden_atr.rs  golden_avgprice.rs  golden_bbands.rs  golden_beta.rs  golden_bop.rs  golden_cci.rs  golden_cdl2crows.rs  golden_cdl3blackcrows.rs  golden_cdl3inside.rs  golden_cdl3linestrike.rs  golden_cdl3outside.rs  golden_cdl3starsinsouth.rs  golden_cdl3whitesoldiers.rs  golden_cdlabandonedbaby.rs  golden_cdladvanceblock.rs  golden_cdlbelthold.rs  golden_cdlbreakaway.rs  golden_cdlclosingmarubozu.rs  golden_cdlconcealbabyswall.rs  golden_cdlcounterattack.rs  golden_cdldarkcloudcover.rs  golden_cdldoji.rs  golden_cdldojistar.rs  golden_cdldragonflydoji.rs  golden_cdlengulfing.rs  golden_cdleveningdojistar.rs  golden_cdleveningstar.rs  golden_cdlgapsidesidewhite.rs  golden_cdlgravestonedoji.rs  (+110 more)
crates/polars-ta/src/: lib.rs
crates/polars-ta/src/math_ops/: mod.rs
crates/polars-ta/src/math_transform/: mod.rs
crates/polars-ta/src/oscillator/: aroon.rs  aroonosc.rs  cci.rs  mfi.rs  mod.rs  rsi.rs  stoch.rs  stochf.rs  stochrsi.rs  ultosc.rs  willr.rs
crates/polars-ta/src/price_transform/: mod.rs
crates/polars-ta/src/trend/: adx.rs  bbands.rs  ema.rs  ma.rs  macd.rs  macdext.rs  macdfix.rs  mod.rs  sar.rs  sarext.rs  sma.rs
crates/polars-ta/src/volatility/: atr.rs  mod.rs  trange.rs
crates/polars-ta/src/volume/: ad.rs  adosc.rs  mod.rs  obv.rs
docs/: AI_GUIDE.md  CUSTOM_INDICATOR.md
scripts/: bench_talib.py  compare_all.sh  compare_bench.py  gen_cdl_golden.py  generate_golden.py  generate_report.py  ht_reference.py  ht_verify.py  run_golden.sh
wiki/: Contributing.md  Home.md  Indicator-Reference.md  Performance.md  Quick-Start.md
