[package]
name = "polars-ta"
description = "Polars Series interface for technical indicators — native Polars integration, aligned with ta-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["polars", "technical-analysis", "finance", "trading"]
categories = ["algorithms", "science"]

[dependencies]
polars-ta-core = { workspace = true }
polars-core = { workspace = true }

[dev-dependencies]
polars = { workspace = true }
